--- a/planter.html
+++ b/planter.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caudex&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <script src="script.js" async defer></script>
@@ -31,5 +32,6 @@
             </div>
         </main>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
 </body>
 </html>
