--- a/submit.html
+++ b/submit.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caudex&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <script src="script.js" async defer></script>
@@ -19,7 +20,7 @@
                 <h3>Plant Request</h3>
                 <div>
                     <label for="name"></label>
-                    <input type="text" id="shortName" placeholder="Nickname"/>
+                    <input type="text" id="commonName" placeholder="Common Name"/>
                 </div>
                 <div>
                     <label for="sciName"></label>
@@ -39,5 +40,6 @@
             </div>
         </main>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
 </body>
 </html>
