--- a/planter.html
+++ b/planter.html
@@ -1,7 +1,16 @@
+<!--TO DO
+    MAKE MAIN NAV LOOK BETTER
+    MAKE PLANT LIST PAGE
+    MAKE PLANT SEARCH
+    SUBMIT 100 BASIC PLANTS
+    UPCOMING GUIDES PAGE - READ FROM DATABASE
+    FRONT PAGE
+-->
 <!DOCTYPE html>
 <html>
 <head>
     <title>Planter</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Give You Glory' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
@@ -12,14 +21,19 @@
 <body>
     <script src="script.js" async defer></script>
     <div class="wrapper">
-        <header>
-            <div class="banner">
+        <header> 
+            <div href="planter.html" class="banner">
                 <h1>Planter</h1>
+                <div class="search">
+                    <label for="search"></label>
+                    <input onClick="this.setSelectionRange(0, this.value.length)" type="text" id="search" placeholder="Find a plant guide"/>
+                </div>
             </div>
+            
             <div class="main-nav">
-                <p>Index</p>
-                <p>Submit</p>
-                <p>About</p>
+                <a href="catalogue.html">Guides</a>
+                <a href="submit.html">Submit</a>
+                <a href="#about">About</a>
             </div>
         </header>
         <main>
@@ -35,3 +49,17 @@
     <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
 </body>
 </html>
+
+<div class="topnav">
+    <a href="#home" class="active">Logo</a>
+    <!-- Navigation links (hidden by default) -->
+    <div id="myLinks">
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
+    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
