--- a/submit.html
+++ b/submit.html
@@ -1,7 +1,16 @@
+<!--TO DO
+    MAKE MAIN NAV LOOK BETTER - even spacing
+    MAKE PLANT LIST PAGE
+    MAKE PLANT SEARCH
+    SUBMIT 100 BASIC PLANTS
+    UPCOMING GUIDES PAGE - READ FROM DATABASE
+    FRONT PAGE
+-->
 <!DOCTYPE html>
 <html>
 <head>
     <title>Planter</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Give You Glory' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
@@ -12,24 +21,26 @@
 <body>
     <script src="script.js" async defer></script>
     <header>
-        <div class="banner">
+        <div href="planter.html" class="banner">
             <h1>Planter</h1>
+            <div class="dashboard">
+                <form id="myForm">
+                    <h3>Plant Request</h3>
+                    <div class="submitItem">
+                        <label for="name"></label>
+                        <input onClick="this.setSelectionRange(0, this.value.length)" type="text" id="commonName" placeholder="Common Name"/>
+                    </div>
+                    <div class="submitItem">
+                        <label for="sciName"></label>
+                        <input onClick="this.setSelectionRange(0, this.value.length)" type="text" id="sciName" placeholder="Scientific Name"/>
+                    </div>
+                    <div class="form-submit">
+                        <button id="sub-button" onclick="addPlant()" type='submit'>Request</button>
+                    </div>
+                </form>
+            </div>
         </div>
-        <div class="dashboard">
-            <form id="myForm">
-                <h3>Plant Request</h3>
-                <div>
-                    <label for="name"></label>
-                    <input onClick="this.setSelectionRange(0, this.value.length)" type="text" id="commonName" placeholder="Common Name"/>
-                </div>
-                <div>
-                    <label for="sciName"></label>
-                    <input onClick="this.setSelectionRange(0, this.value.length)" type="text" id="sciName" placeholder="Scientific Name"/>
-                </div>
-                <div class="form-submit">
-                    <button id="sub-button" onclick="addPlant() "type='submit'>Request</button>
-                </div>
-            </form>
+        
     </header>
         <main>
             <div class="main-content">
@@ -39,7 +50,7 @@
                     Curabitur scelerisque commodo ex, vel molestie mi tristique a. Duis et aliquam ex. Integer tempus posuere porta. Maecenas massa augue, luctus nec fringilla eget, rhoncus aliquet urna. Integer sed enim vitae ligula egestas consectetur vitae ac mauris. Etiam pellentesque ante nec nisi blandit, non mollis est tristique. Nullam porta diam id magna faucibus bibendum. Duis placerat ipsum ac arcu bibendum, nec ultrices magna egestas. Phasellus et iaculis mauris. Mauris augue erat, egestas in elit ac, laoreet consectetur nunc. Nam at orci ut massa lobortis vehicula sit amet sed tortor. Morbi suscipit, lectus ut efficitur volutpat, mi tellus sollicitudin urna, eu mattis elit mi id nunc. Maecenas molestie purus ultricies risus luctus, nec sagittis dui posuere.</p>
             </div>
         </main>
-    </div>
+    
     <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
 </body>
 </html>
