Update Firebase and add database source in HTML docs

--- a/submit.html
+++ b/submit.html
@@ -50,7 +50,7 @@
                     Curabitur scelerisque commodo ex, vel molestie mi tristique a. Duis et aliquam ex. Integer tempus posuere porta. Maecenas massa augue, luctus nec fringilla eget, rhoncus aliquet urna. Integer sed enim vitae ligula egestas consectetur vitae ac mauris. Etiam pellentesque ante nec nisi blandit, non mollis est tristique. Nullam porta diam id magna faucibus bibendum. Duis placerat ipsum ac arcu bibendum, nec ultrices magna egestas. Phasellus et iaculis mauris. Mauris augue erat, egestas in elit ac, laoreet consectetur nunc. Nam at orci ut massa lobortis vehicula sit amet sed tortor. Morbi suscipit, lectus ut efficitur volutpat, mi tellus sollicitudin urna, eu mattis elit mi id nunc. Maecenas molestie purus ultricies risus luctus, nec sagittis dui posuere.</p>
             </div>
         </main>
-    
-    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
 </body>
 </html>
