--- a/catalogue.html
+++ b/catalogue.html
@@ -52,6 +52,7 @@
                     -->
         </main>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
 </body>
 </html>
