--- a/planter.html
+++ b/planter.html
@@ -46,7 +46,8 @@
             </div>
         </main>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
 </body>
 </html>
 
