rework submit page, add hover styles for buttons, add about page, add media queries for landscape orientation

--- a/submit.html
+++ b/submit.html
@@ -12,8 +12,7 @@
     <title>Planter</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Give You Glory' rel='stylesheet'>
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caudex&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 
@@ -23,31 +22,32 @@
     <header>
         <div href="planter.html" class="banner">
             <h1>Planter</h1>
+        </div>
+        <div class="main-nav">
+            <a href="catalogue.html">Guides</a>
+            <a href="submit.html">Submit</a>
+            <a href="about.html">About</a>
+        </div>
+    </header>
+        <main>
             <div class="dashboard">
                 <form id="myForm">
-                    <h3>Plant Request</h3>
+                    <h2 class="requestHeader">Request plant help</h2>
                     <div class="submitItem">
                         <label for="name"></label>
-                        <input onClick="this.setSelectionRange(0, this.value.length)" type="text" id="commonName" placeholder="Common Name"/>
+                        <input onClick="this.setSelectionRange(0, this.value.length)" type="text" id="commonName" placeholder=" Common Name"/>
                     </div>
                     <div class="submitItem">
                         <label for="sciName"></label>
-                        <input onClick="this.setSelectionRange(0, this.value.length)" type="text" id="sciName" placeholder="Scientific Name"/>
+                        <input onClick="this.setSelectionRange(0, this.value.length)" type="text" id="sciName" placeholder=" Scientific Name"/>
                     </div>
+                    <div class="notes">
+                        <label for="notes"></label>
+                        <input onClick="this.setSelectionRange(0, this.value.length)" type="text" id="notes" placeholder=" Notes"/>                </div>
                     <div class="form-submit">
                         <button id="sub-button" onclick="addPlant()" type='submit'>Request</button>
                     </div>
                 </form>
-            </div>
-        </div>
-        
-    </header>
-        <main>
-            <div class="main-content">
-                <h2>Care tip of the week: Drying Basil</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ullamcorper bibendum massa, vitae faucibus felis facilisis quis. Donec quis tincidunt urna, sed imperdiet felis. Etiam dictum congue sagittis. Vivamus imperdiet at diam quis viverra. Phasellus quis tellus ac eros dignissim facilisis et non sem. Aliquam a tempor elit. Vivamus sollicitudin erat quis faucibus vestibulum. Nunc rutrum vulputate ante eu ultricies. Nunc eu nisl vitae diam luctus tincidunt a vitae dui. Praesent scelerisque cursus massa, a consequat ex consequat non. Quisque imperdiet tortor nec turpis bibendum tincidunt.
-
-                    Curabitur scelerisque commodo ex, vel molestie mi tristique a. Duis et aliquam ex. Integer tempus posuere porta. Maecenas massa augue, luctus nec fringilla eget, rhoncus aliquet urna. Integer sed enim vitae ligula egestas consectetur vitae ac mauris. Etiam pellentesque ante nec nisi blandit, non mollis est tristique. Nullam porta diam id magna faucibus bibendum. Duis placerat ipsum ac arcu bibendum, nec ultrices magna egestas. Phasellus et iaculis mauris. Mauris augue erat, egestas in elit ac, laoreet consectetur nunc. Nam at orci ut massa lobortis vehicula sit amet sed tortor. Morbi suscipit, lectus ut efficitur volutpat, mi tellus sollicitudin urna, eu mattis elit mi id nunc. Maecenas molestie purus ultricies risus luctus, nec sagittis dui posuere.</p>
             </div>
         </main>
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
