--- a/about.html
+++ b/about.html
@@ -37,30 +37,13 @@
             </div>
         </header>
         <main>
-            
-            <div class="main-content">
-                <h2>Care tip of the week: Drying Basil</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ullamcorper bibendum massa, vitae faucibus felis facilisis quis. Donec quis tincidunt urna, sed imperdiet felis. Etiam dictum congue sagittis. Vivamus imperdiet at diam quis viverra. Phasellus quis tellus ac eros dignissim facilisis et non sem. Aliquam a tempor elit. Vivamus sollicitudin erat quis faucibus vestibulum. Nunc rutrum vulputate ante eu ultricies. Nunc eu nisl vitae diam luctus tincidunt a vitae dui. Praesent scelerisque cursus massa, a consequat ex consequat non. Quisque imperdiet tortor nec turpis bibendum tincidunt.
-
-                    Curabitur scelerisque commodo ex, vel molestie mi tristique a. Duis et aliquam ex. Integer tempus posuere porta. Maecenas massa augue, luctus nec fringilla eget, rhoncus aliquet urna. Integer sed enim vitae ligula egestas consectetur vitae ac mauris. Etiam pellentesque ante nec nisi blandit, non mollis est tristique. Nullam porta diam id magna faucibus bibendum. Duis placerat ipsum ac arcu bibendum, nec ultrices magna egestas. Phasellus et iaculis mauris. Mauris augue erat, egestas in elit ac, laoreet consectetur nunc. Nam at orci ut massa lobortis vehicula sit amet sed tortor. Morbi suscipit, lectus ut efficitur volutpat, mi tellus sollicitudin urna, eu mattis elit mi id nunc. Maecenas molestie purus ultricies risus luctus, nec sagittis dui posuere.</p>
-            </div>
+           <div class="main-content">
+                <h2>Plant care made easy.</h2>
+                Welcome to Planter, your simple, easy to read plant helper. Planter is dedicated to providing the everyday person with plant help that is clear and understandable. If you're looking for a plant that isn't listed here, please request it on the submit page! 
+           </div> 
         </main>
     </div>
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
 </body>
 </html>
-
-<div class="topnav">
-    <a href="#home" class="active">Logo</a>
-    <!-- Navigation links (hidden by default) -->
-    <div id="myLinks">
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
-    </div>
-    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-      <i class="fa fa-bars"></i>
-    </a>
-  </div>
