--- a/catalogue.html
+++ b/catalogue.html
@@ -13,19 +13,24 @@
     <title>Planter</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Give You Glory' rel='stylesheet'>
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Caudex&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=Caudex&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
     <script src="script.js" async defer></script>
     <script src="catalogue.js" async defer></script>
+    
     <div class="wrapper">
         <header>
             <div class="banner">
                 <h1>Planter</h1>
+            </div>
+            <div class="main-nav">
+                <a href="catalogue.html">Guides</a>
+                <a href="submit.html">Submit</a>
+                <a href="about.html">About</a>
             </div>
             
         </header>
