add notes to request function, improve content readability for large screens

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         <main>
            <div class="main-content">
                 <h2>Plant care made easy.</h2>
-                Welcome to Planter, your simple, easy to read plant helper. Planter is dedicated to providing the everyday person with plant help that is clear and understandable. If you're looking for a plant that isn't listed here, please request it on the submit page! 
+                <p>Welcome to Planter, your simple, easy to read plant helper. Planter is dedicated to providing the everyday person with plant help that is clear and understandable. If you're looking for a plant that isn't listed here, please request it on the submit page!</p>
            </div> 
         </main>
     </div>
