--- a/planter.html
+++ b/planter.html
@@ -12,6 +12,7 @@
 <head>
     <title>Planter</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caudex&display=swap" rel="stylesheet">
@@ -19,22 +20,25 @@
 
 </head>
 <body>
-    <script src="script.js" async defer></script>
     <div class="wrapper">
         <header> 
-            <div href="planter.html" class="banner">
-                <h1>Planter</h1>
-                <!-- <div class="search">
-                    <label for="search"></label>
-                    <input onClick="this.setSelectionRange(0, this.value.length)" type="text" id="search" placeholder="Find a plant guide"/>
-                </div> -->
-            </div>
             
-            <div class="main-nav">
-                <a href="catalogue.html">Guides</a>
-                <a href="submit.html">Submit</a>
-                <a href="about.html">About</a>
-            </div>
+            <div class="topnav">
+                <a href="planter.html" class="active">Planter</a>
+                <!-- Navigation links (hidden by default) -->
+                <div id="myLinks">
+                  <a href="submit.html">Submit</a>
+                  <a href="catalogue.html">Catalogue</a>
+                  <a href="about.html">About</a>
+                </div>
+                <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+                <a href="javascript:void(0);" class="icon" onclick="hamburger()">
+                  <i class="fa fa-bars"></i>
+                </a>
+              </div>
+
+
+
         </header>
         <main>
             
@@ -46,7 +50,8 @@
             </div>
         </main>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-database.js"></script>
+    <script src="script.js" async defer></script>
 </body>
 </html>
