Add modal to show plant info

--- a/planter.html
+++ b/planter.html
@@ -32,7 +32,7 @@
         <main>
            <div class="main-content">
                 <h2 class="aboutHeader">Plant care made easy.</h2>
-                <p>Welcome to Planter, your simple, easy to read plant helper. Planter is dedicated to providing the everyday person with plant help that is clear and understandable. If you're looking for a plant that isn't listed on the Guides page, please request it on the submit page!</p>
+                <p>Welcome to Planter, your simple, easy to use plant helper. Planter is dedicated to providing the everyday person with plant help that is clear and understandable. If you're looking for a plant that isn't listed on the Guides page, please request it on the submit page!</p>
            </div> 
         </main>
     </div>
