--- a/catalogue.html
+++ b/catalogue.html
@@ -16,12 +16,12 @@
         
             <a class="home-button" href="planter.html">Planter</a>
             <div id="mySidebar" class="sidebar">
-              <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-              <a href="planter.html">Home</a>
-              <a href="catalogue.html">Guides</a>
-              <a href="submit.html">Submit</a>
-              <a href="about.html">About</a>
-            </div>
+                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                <a class="navLinks" href="planter.html">Home</a>
+                <a class="navLinks" href="catalogue.html">Guides</a>
+                <a class="navLinks" href="submit.html">Submit</a>
+                <a class="navLinks" href="about.html">About</a>
+              </div>
             
             <div id="main">
               <button class="openbtn" onclick="openNav()">&#9776;</button>
